multi language and fix markers for gsap (#13)
* multi language

* home subpage form ongoing

* home subpage form section demo

* multilang

Co-authored-by: Smarttabdev <87866630+Smarttabdev@users.noreply.github.com>

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -11,6 +11,12 @@ html {
 }
 body{
   /* overflow-x: hidden; */
+  white-space: pre-line;
+
+
+}
+
+#root {
 
 }
 
@@ -209,7 +215,9 @@ section {
 /* Custom Input style */
 .custom-input {
   position: relative;
-  border: 1px solid transparent;
+  border: 1px solid #DADADA;
+  background-color: transparent;
+  padding: 0.5em 0.75em;
   border-radius: 6px;
   background-clip: padding-box;
   /* just to show box-shadow still works fine */
