--- a/styles/globals.css
+++ b/styles/globals.css
@@ -7,11 +7,12 @@ body {
   /* overflow-y: scroll; */
 }
 html {
-  overflow-x: hidden;
+  /* overflow-x: hidden; */
 }
 body{
   /* overflow-x: hidden; */
   white-space: pre-line;
+  /* overflow-y: scroll; */
 
 
 }
@@ -28,9 +29,15 @@ a {
 * {
   box-sizing: border-box;
 }
-*::-webkit-scrollbar {
-  width: '0.4em';
+body::-webkit-scrollbar {
+  /* display: none; */
 }
+/* #business_page::-webkit-scrollbar {
+  display: none;
+}
+#business_page {
+  overflow-y: scroll;
+} */
 *::-webkit-scrollbar-track {
   -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.00);
 }
