subpage Navitem & equal box sizing & footer missing & back to solution anchor (#30)
* multi language

* home subpage form ongoing

* home subpage form section demo

* multilang

* overflowclip

* deploy error fixed

* deploy error fixed

* deploy error fixed

* deploy error fixed

* industrial subpage backgroundcolor

* fix aboutus touch issue

* multi language demo

* multi language demo

* multi language demo

* multi language demo

* fix some issue for deploy

* fix some issue for deploy

* fix some issue for deploy

* multilanguage key modified

* subpage Navitem & equal box sizing & footer missing & back to solution anchor

Co-authored-by: Smarttabdev <87866630+Smarttabdev@users.noreply.github.com>

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -169,6 +169,9 @@ section {
   .unique-skill-items:hover .unique-skill-button p{
     color: #ffffffb3;
   }
+  .unique-skill-items:hover>div>div{
+    height: max-content;
+  }
   
   .unique-skill-items:hover .unique-skill-description, .unique-skill-items:hover .unique-skill-list {
     display: block;
