--- a/styles/globals.css
+++ b/styles/globals.css
@@ -136,18 +136,40 @@ section {
 .unique-skill-items:not(:hover) .h-full, .unique-skill-items:not(:active) .h-full{
   height: fit-content;
 }
-.unique-skill-items, .unique-skill-title {
-  transition: all 0.6s linear;
-}
-.unique-skill-items:hover .unique-graph, .unique-skill-items:active .unique-graph {
-  width: 80%;
-  opacity: 0.7;
-  transition: all 0.6s linear;
 
+.unique-skill-items{
+  height: 100%;
+  transition: all 0.5s linear;
+  
 }
-.unique-skill-items:hover .unique-skill-title, .unique-skill-items:active .unique-skill-title {
-  display: none;
-  opacity: 0;
+
+@keyframes hideTitle{
+  0%{
+      opacity: 1;
+      position: absolute;
+      top: 50px;
+  }
+  100%{
+      opacity:0;
+      position: absolute;
+      top: 30px;
+      height: 0;
+     
+  }
+}
+@keyframes showTitle{
+  0%{
+      opacity: 0;
+      height: 0;
+      position: absolute;
+      top: 30px;
+  }
+  100%{
+      opacity:1;
+      height: 30px;
+      position: absolute;
+      top: 50px;
+  }
 }
 
 .unique-skill-items:hover .unique-skill-button p, .unique-skill-items:active .unique-skill-button p{
@@ -170,6 +192,25 @@ section {
     display: block;
     padding: 10px;
     width: inherit;
+  }
+
+  .unique-skill-title {
+    transition: all 0.6s linear;
+    animation: showTitle 1s forwards;
+   
+   }
+   .unique-skill-items:hover .unique-skill-title, .unique-skill-items:active .unique-skill-title {
+     transition: all 0.6s linear;
+     animation: hideTitle 1s forwards;
+     
+   }
+
+   .unique-skill-items:hover .unique-graph, .unique-skill-items:active .unique-graph {
+    width: 80%;
+    opacity: 0.7;
+    transition: all 0.5s linear;
+    
+    
   }
   
   
@@ -194,12 +235,7 @@ section {
 
 .credential-carousel:focus-visible{
   outline: none;
-}
-
-/* .credential-carousel .is-selected {
-  transform: translateX(26.2%) !important;
-  width: 34%;
-} */
+} 
 
 .credential-detail{
   cursor: pointer;
@@ -274,3 +310,21 @@ section {
 .form-animate {
   transition: all 0.4s cubic-bezier(0.68, 0.22, 1, 1) 0s;
 }
+
+/* hide arrows from input number */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type=number] {
+  -moz-appearance: textfield;
+}
+
+
+/* location Edit */
+/* .locaton-edit:focus ~ .location-edit-item {
+  display: flex;
+} */
