--- a/styles/globals.css
+++ b/styles/globals.css
@@ -140,46 +140,46 @@ section {
     cursor: pointer;
   }
   
-}
-
-.unique-skill-items:not(:hover) .h-full, .unique-skill-items:not(:active) .h-full{
-  height: fit-content;
-}
-.unique-skill-items, .unique-skill-title {
-  transition: all 0.6s linear;
-}
-.unique-skill-items:hover .unique-graph, .unique-skill-items:active .unique-graph {
-  width: 80%;
-  opacity: 0.7;
-  transition: all 0.6s linear;
-
-}
-@keyframes showTitle{
-  0%{
-      opacity: 0;
-      height: 0;
-      position: absolute;
-      top: 30px;
+  .unique-skill-items:not(:hover) .h-full, .unique-skill-items:not(:active) .h-full{
+    height: fit-content;
   }
-  100%{
-      opacity:1;
-      height: 30px;
-      position: absolute;
-      top: 50px;
+  .unique-skill-items, .unique-skill-title {
+    transition: all 0.6s linear;
+  }
+  .unique-skill-items:hover .unique-graph, .unique-skill-items:active .unique-graph {
+    width: 80%;
+    opacity: 0.7;
+    transition: all 0.6s linear;
+  
+  }
+  @keyframes showTitle{
+    0%{
+        opacity: 0;
+        height: 0;
+        position: absolute;
+        top: 30px;
+    }
+    100%{
+        opacity:1;
+        height: 30px;
+        position: absolute;
+        top: 50px;
+    }
+  }
+  
+  .unique-skill-items:hover .unique-skill-button p, .unique-skill-items:active .unique-skill-button p{
+    color: #ffffffb3;
+  }
+  .unique-skill-items:hover>div>div, .unique-skill-items:active>div>div{
+    height: max-content;
+  }
+  .unique-skill-items:hover .unique-skill-description, .unique-skill-items:hover .unique-skill-list {
+    display: block;
   }
 }
 
-.unique-skill-items:hover .unique-skill-button p, .unique-skill-items:active .unique-skill-button p{
-  color: #ffffffb3;
-}
-.unique-skill-items:hover>div>div, .unique-skill-items:active>div>div{
-  height: max-content;
-}
-.unique-skill-items:hover .unique-skill-description, .unique-skill-items:hover .unique-skill-list {
-  display: block;
-}
 @media only screen and (min-width: 920px) {
-  .unique-skill-items:hover {
+  /* .unique-skill-items:hover {
     width: 350px;
     height: fit-content;
     cursor: pointer;
@@ -208,7 +208,7 @@ section {
     transition: all 0.5s linear;
     
     
-  }
+  } */
   
   
 }
