--- a/styles/globals.css
+++ b/styles/globals.css
@@ -257,14 +257,24 @@ section {
 
 
 /* Custom Input style */
+.custom-input-gradient {
+        height: fit-content;
+        border-left: 1.5px solid #fdfdfd54;
+        border-right: 1.5px solid rgba(255, 255, 255, 0.219);
+        background-image: linear-gradient(45deg, #ffffff18, #ffffff41), linear-gradient(90deg, #fcfcfc46, rgba(247, 245, 240, 0.418));
+        background-size: 100% 1.5px;
+        background-position: 0 0, 0 100%;
+        background-repeat: no-repeat;
+        border-radius: 6px;
+}
 .custom-input {
   position: relative;
-  border: 1px solid #00000017;
+  /* border: 1px solid #00000017; */
   background-color: transparent;
   padding: 0.5em 0.75em;
   border-radius: 6px;
-  background-clip: padding-box;
-  box-shadow: 0 0 0 rgba(255, 255, 255, 0.24), inset 0 0 2px rgba(255, 255, 255, 1);
+  /* background-clip: padding-box; */
+  /* box-shadow: 0 0 0 rgba(255, 255, 255, 0.24), inset 0 0 2px rgba(255, 255, 255, 1); */
 
 }
 .custom-input:after{
