--- a/styles/globals.css
+++ b/styles/globals.css
@@ -261,7 +261,7 @@ section {
         height: fit-content;
         border-left: 1.5px solid #fdfdfd54;
         border-right: 1.5px solid rgba(255, 255, 255, 0.219);
-        background-image: linear-gradient(45deg, #ffffff18, #ffffff41), linear-gradient(90deg, #fcfcfc46, rgba(247, 245, 240, 0.418));
+        background-image: linear-gradient(45deg, #ffffff18, #ffffff29), linear-gradient(90deg, #fcfcfc17, rgb(253 253 253 / 39%));
         background-size: 100% 1.5px;
         background-position: 0 0, 0 100%;
         background-repeat: no-repeat;
@@ -269,21 +269,30 @@ section {
 }
 .custom-input {
   position: relative;
-  /* border: 1px solid #00000017; */
+  border: 1px solid #00000017;
   background-color: transparent;
   padding: 0.5em 0.75em;
   border-radius: 6px;
-  /* background-clip: padding-box; */
-  /* box-shadow: 0 0 0 rgba(255, 255, 255, 0.24), inset 0 0 2px rgba(255, 255, 255, 1); */
+  background-clip: padding-box;
+  box-shadow: 0 0 0 rgba(255, 255, 255, 0.24), inset 0 0 2px rgba(255, 255, 255, 1);
 
 }
-.custom-input:after{
+.custom-input-dark {
+  position: relative;
+  background-color: transparent;
+  padding: 0.5em 0.75em;
+  border-radius: 6px;
+}
+.custom-input-dark:focus {
+  outline: none;
+}
+/* .custom-input:after{
   position: absolute;
   top: -4px; bottom: -4px;
   left: -4px; right: -4px;
   content: '';
   z-index: -1;
-}
+} */
 
 .custom-input:focus-visible {
   outline: none;
