--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,10 +6,12 @@ body {
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
   /* overflow-y: scroll; */
 }
+
 html {
   /* overflow-x: hidden; */
 }
-body{
+
+body {
   /* overflow-x: hidden; */
   white-space: pre-line;
   /* overflow-y: scroll; */
@@ -18,15 +20,13 @@ body{
   background-color: #000000;
 }
 
-@media  only screen and (max-width: 920px) {
+@media only screen and (max-width: 920px) {
   body {
     overflow-y: auto;
   }
 }
 
-#root {
-
-}
+#root {}
 
 a {
   color: inherit;
@@ -36,9 +36,11 @@ a {
 * {
   box-sizing: border-box;
 }
+
 body::-webkit-scrollbar {
   /* display: none; */
 }
+
 /* #business_page::-webkit-scrollbar {
   display: none;
 }
@@ -46,10 +48,11 @@ body::-webkit-scrollbar {
   overflow-y: scroll;
 } */
 *::-webkit-scrollbar-track {
-  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.00);
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.00);
 }
+
 *::-webkit-scrollbar-thumb {
-  background-color: rgba(0,0,0,.1);
+  background-color: rgba(0, 0, 0, .1);
   outline: 1px solid slategrey;
 }
 
@@ -79,7 +82,7 @@ body::-webkit-scrollbar {
   transform: translate(0, -50%);
 }
 
-.sparkle-arrow-reverse{
+.sparkle-arrow-reverse {
   transform: translate(0, -50%) scaleX(-1) !important;
 }
 
@@ -95,21 +98,36 @@ body::-webkit-scrollbar {
   color: white;
 }
 
+.font-lato-light {
+  -webkit-font-smoothing: subpixel-antialiased;
+}
+
 
 /* lato-100italic - latin-ext_latin */
 @font-face {
   font-family: 'Lato-light';
   font-weight: 100;
-  src: url('/fonts/lato-v23-latin-ext_latin-100italic.eot'); /* IE9 Compat Modes */
+  src: url('/fonts/lato-v23-latin-ext_latin-100italic.eot');
+  /* IE9 Compat Modes */
   src: local(''),
-       url('/fonts/lato-v23-latin-ext_latin-100italic.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-       url('/fonts/lato-v23-latin-ext_latin-100italic.woff2') format('woff2'), /* Super Modern Browsers */
-       url('/fonts/lato-v23-latin-ext_latin-100italic.woff') format('woff'), /* Modern Browsers */
-       url('/fonts/lato-v23-latin-ext_latin-100italic.ttf') format('truetype'), /* Safari, Android, iOS */
-       url('/fonts/lato-v23-latin-ext_latin-100italic.svg#Lato') format('svg'); /* Legacy iOS */
+    url('/fonts/lato-v23-latin-ext_latin-100italic.eot?#iefix') format('embedded-opentype'),
+    /* IE6-IE8 */
+    url('/fonts/lato-v23-latin-ext_latin-100italic.woff2') format('woff2'),
+    /* Super Modern Browsers */
+    url('/fonts/lato-v23-latin-ext_latin-100italic.woff') format('woff'),
+    /* Modern Browsers */
+    url('/fonts/lato-v23-latin-ext_latin-100italic.ttf') format('truetype'),
+    /* Safari, Android, iOS */
+    url('/fonts/lato-v23-latin-ext_latin-100italic.svg#Lato') format('svg');
+  /* Legacy iOS */
 }
 
-.main-footer{position:-webkit-sticky; position:sticky; bottom:0; border-color:red;}
+.main-footer {
+  position: -webkit-sticky;
+  position: sticky;
+  bottom: 0;
+  border-color: red;
+}
 
 section {
   height: 100vh;
@@ -130,11 +148,12 @@ section {
 
 /* Uneque Skills section style */
 
-@media  only screen and (max-width: 920px) {
+@media only screen and (max-width: 920px) {
   .unique-skill-items:hover .sparkle {
     content: url('/images/sparkle-arrow.svg');
     pointer-events: all;
   }
+
   section {
     height: 982px;
   }
@@ -143,41 +162,53 @@ section {
     height: fit-content;
     cursor: pointer;
   }
-  
-  .unique-skill-items:not(:hover) .h-full, .unique-skill-items:not(:active) .h-full{
+
+  .unique-skill-items:not(:hover) .h-full,
+  .unique-skill-items:not(:active) .h-full {
     height: fit-content;
   }
-  .unique-skill-items, .unique-skill-title {
+
+  .unique-skill-items,
+  .unique-skill-title {
     transition: all 0.6s linear;
   }
-  .unique-skill-items:hover .unique-graph, .unique-skill-items:active .unique-graph {
+
+  .unique-skill-items:hover .unique-graph,
+  .unique-skill-items:active .unique-graph {
     width: 80%;
     opacity: 0.7;
     transition: all 0.6s linear;
-  
+
   }
-  @keyframes showTitle{
-    0%{
-        opacity: 0;
-        height: 0;
-        position: absolute;
-        top: 30px;
+
+  @keyframes showTitle {
+    0% {
+      opacity: 0;
+      height: 0;
+      position: absolute;
+      top: 30px;
     }
-    100%{
-        opacity:1;
-        height: 30px;
-        position: absolute;
-        top: 50px;
+
+    100% {
+      opacity: 1;
+      height: 30px;
+      position: absolute;
+      top: 50px;
     }
   }
-  
-  .unique-skill-items:hover .unique-skill-button p, .unique-skill-items:active .unique-skill-button p{
+
+  .unique-skill-items:hover .unique-skill-button p,
+  .unique-skill-items:active .unique-skill-button p {
     color: #ffffffb3;
   }
-  .unique-skill-items:hover>div>div, .unique-skill-items:active>div>div{
+
+  .unique-skill-items:hover>div>div,
+  .unique-skill-items:active>div>div {
     height: max-content;
   }
-  .unique-skill-items:hover .unique-skill-description, .unique-skill-items:hover .unique-skill-list {
+
+  .unique-skill-items:hover .unique-skill-description,
+  .unique-skill-items:hover .unique-skill-list {
     display: block;
   }
 }
@@ -213,8 +244,8 @@ section {
     
     
   } */
-  
-  
+
+
 }
 
 
@@ -228,22 +259,23 @@ section {
   outline: none;
 }
 
-.flickity-prev-next-button.previous,  .flickity-prev-next-button.next{
+.flickity-prev-next-button.previous,
+.flickity-prev-next-button.next {
   display: none;
 }
 
 /* Credential section style */
 
-.credential-carousel:focus-visible{
+.credential-carousel:focus-visible {
   outline: none;
-} 
+}
 
-.credential-detail{
+.credential-detail {
   cursor: pointer;
   /* transition: all .4s ease-in-out; */
 }
 
-  /* .credential-detail:hover ul {
+/* .credential-detail:hover ul {
     display: block;
   } */
 
@@ -258,18 +290,19 @@ section {
 
 /* Custom Input style */
 .custom-input-gradient {
-        height: fit-content;
-        border-left: 1.5px solid #fdfdfd54;
-        border-right: 1.5px solid rgba(255, 255, 255, 0.219);
-        background-image: linear-gradient(45deg, #ffffff18, #ffffff29), linear-gradient(90deg, #fcfcfc17, rgb(253 253 253 / 39%));
-        background-size: 100% 1.5px;
-        background-position: 0 0, 0 100%;
-        background-repeat: no-repeat;
-        border-radius: 6px;
+  height: fit-content;
+  border-left: 1.5px solid #fdfdfd54;
+  border-right: 1.5px solid rgba(255, 255, 255, 0.219);
+  background-image: linear-gradient(45deg, #ffffff18, #ffffff29), linear-gradient(90deg, #fcfcfc17, rgb(253 253 253 / 39%));
+  background-size: 100% 1.5px;
+  background-position: 0 0, 0 100%;
+  background-repeat: no-repeat;
+  border-radius: 6px;
 }
+
 .custom-input {
   position: relative;
-  /* border: 1px solid #00000017; */
+  border: 1px solid #00000017;
   background-color: transparent;
   padding: 0.5em 0.75em;
   border-radius: 6px;
@@ -277,15 +310,18 @@ section {
   /* box-shadow: 0 0 0 rgba(255, 255, 255, 0.24), inset 0 0 2px rgba(255, 255, 255, 1); */
 
 }
+
 .custom-input-dark {
   position: relative;
   background-color: transparent;
   padding: 0.5em 0.75em;
   border-radius: 6px;
 }
+
 .custom-input-dark:focus {
   outline: none;
 }
+
 /* .custom-input:after{
   position: absolute;
   top: -4px; bottom: -4px;
@@ -300,14 +336,14 @@ section {
 
 
 /* Read more less style */
-.short-text{
+.short-text {
   font-weight: 300;
 }
 
-.readMoreText{
+.readMoreText {
   position: absolute;
-    left: 5px;
-    bottom: -40px;
+  left: 5px;
+  bottom: -40px;
 }
 
 .styled-btn {
@@ -321,6 +357,7 @@ section {
   background-clip: content-box, border-box;
   box-shadow: 2px 1000px 1px #fff inset;
 }
+
 .styled-btn:hover {
   box-shadow: none;
   color: white;
@@ -348,13 +385,16 @@ input[type=number] {
 *::-webkit-scrollbar {
   width: 0px
 }
+
 *::-webkit-scrollbar:horizontal {
   height: 0px;
 }
+
 *::-webkit-scrollbar-track {
   background-color: transparent;
   width: 0
 }
+
 *::-webkit-scrollbar-thumb {
   border-radius: 8px;
   background: transparent;
