--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,9 +2,9 @@ html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: lato;
   /* overflow-y: scroll; */
+  -webkit-font-smoothing: subpixel-antialiased;
 }
 
 html {
@@ -98,9 +98,7 @@ body::-webkit-scrollbar {
   color: white;
 }
 
-.font-lato-light {
-  -webkit-font-smoothing: subpixel-antialiased;
-}
+
 
 
 /* lato-100italic - latin-ext_latin */
