--- a/styles/globals.css
+++ b/styles/globals.css
@@ -118,7 +118,7 @@ body::-webkit-scrollbar {
     /* Super Modern Browsers */
     url('/fonts/lato-v23-latin-ext_latin-100italic.woff') format('woff'),
     /* Modern Browsers */
-    url('/fonts/lato-v23-latin-ext_latin-100italic.ttf') format('truetype'),
+    /* url('/fonts/lato-v23-latin-ext_latin-100italic.ttf') format('truetype'), */
     /* Safari, Android, iOS */
     url('/fonts/lato-v23-latin-ext_latin-100italic.svg#Lato') format('svg');
   /* Legacy iOS */
