--- a/styles/globals.css
+++ b/styles/globals.css
@@ -103,11 +103,10 @@ body::-webkit-scrollbar {
 }
 
 
-
-
 /* lato-100italic - latin-ext_latin */
 @font-face {
   font-family: 'Lato-light';
+  font-style: italic;
   font-weight: 100;
   src: url('/fonts/lato-v23-latin-ext_latin-100italic.eot');
   /* IE9 Compat Modes */
