--- a/styles/globals.css
+++ b/styles/globals.css
@@ -61,8 +61,8 @@ body::-webkit-scrollbar {
 @tailwind utilities;
 
 .back-left-top-gradient-primary {
-  background: linear-gradient(166.42deg, rgba(1, 172, 230, 0.5) 0%, rgba(1, 172, 230, 0) 100%), #000000;
-  background-attachment: fixed;
+  background: linear-gradient(146.42deg, rgba(1, 172, 230, 0.5) 0%, rgba(1, 172, 230, 0) 80%), #000000;
+  /* background-attachment: fixed; */
 }
 
 .back-left-top-gradient-secondary {
