--- a/styles/globals.css
+++ b/styles/globals.css
@@ -38,25 +38,6 @@ a {
   box-sizing: border-box;
 }
 
-body::-webkit-scrollbar {
-  /* display: none; */
-}
-
-/* #business_page::-webkit-scrollbar {
-  display: none;
-}
-#business_page {
-  overflow-y: scroll;
-} */
-*::-webkit-scrollbar-track {
-  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.00);
-}
-
-*::-webkit-scrollbar-thumb {
-  background-color: rgba(0, 0, 0, .1);
-  outline: 1px solid slategrey;
-}
-
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -401,7 +382,7 @@ input[type=number] {
 
 *::-webkit-scrollbar-track {
   background-color: transparent;
-  width: 0
+  width: 0px;
 }
 
 *::-webkit-scrollbar-thumb {
