--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,7 +3,6 @@ body {
   padding: 0;
   margin: 0;
   font-family: lato;
-  -webkit-font-smoothing: subpixel-antialiased;
   scroll-behavior: smooth;
   white-space: pre-line;
   background-color: #000000;
@@ -11,10 +10,40 @@ body {
   overflow-y: hidden;
 }
 
+.unique-skill-border-gradient {
+  background: 
+  linear-gradient(black, black) padding-box,
+  linear-gradient(to bottom, rgba(255,255,255,0.7), transparent) border-box;
+  border-radius: 12px;
+  border: 1px solid transparent;
+}
+
 @media only screen and (max-width: 920px) {
   html,
   body {
     overflow-y: auto;
+  }
+
+  @supports (-webkit-touch-callout: none) {
+    /* CSS specific to iOS devices */ 
+    .font-lato-light {
+      -webkit-text-stroke-width: 0.5px;
+    }
+  }
+  
+  @supports not (-webkit-touch-callout: none) {
+    /* CSS specific to iOS devices */ 
+    .font-lato-light {
+      -webkit-text-stroke-width: 0.2px;
+    }
+  }
+
+  .unique-skill-border-gradient {
+    background: 
+    linear-gradient(black, black) padding-box,
+    linear-gradient(to right, rgba(255,255,255,0.7), transparent) border-box;
+    border-radius: 12px;
+    border: 1px solid transparent;
   }
 }
 
@@ -75,13 +104,6 @@ a {
 .active p {
   color: white;
 }
-
-.font-lato-light {
-  -webkit-font-smoothing: subpixel-antialiased;
-}
-
-
-
 
 /* lato-100italic - latin-ext_latin */
 @font-face {
@@ -384,3 +406,4 @@ input[type=number] {
 .about-us-phone {
   -webkit-transition: opacity 2.0s ease-in;
 }
+
