--- a/styles/globals.css
+++ b/styles/globals.css
@@ -152,13 +152,13 @@ section {
 /* Uneque Skills section style */
 
 @media only screen and (max-width: 920px) {
-  .unique-skill-items:hover .sparkle {
-    content: url('/images/sparkle-arrow.svg');
-    pointer-events: all;
-  }
-
   section {
     height: 982px;
+  }
+  
+  /* .unique-skill-items:hover .sparkle {
+    content: url('/images/sparkle-arrow.svg');
+    pointer-events: all;
   }
 
   .unique-skill-items:active {
@@ -213,7 +213,7 @@ section {
   .unique-skill-items:hover .unique-skill-description,
   .unique-skill-items:hover .unique-skill-list {
     display: block;
-  }
+  } */
 }
 
 @media only screen and (min-width: 920px) {
